--- a/rentacar.html
+++ b/rentacar.html
@@ -7,7 +7,10 @@
 		font-family: 'Arimo', sans-serif;
 		font-family: 'Concert One', cursive;
 	-->
-	<!--iconlar-->
+	<!--iconlar
+		selamlar
+
+		-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
