--- a/rentacar.html
+++ b/rentacar.html
@@ -7,8 +7,7 @@
 		font-family: 'Arimo', sans-serif;
 		font-family: 'Concert One', cursive;
 	-->
-	<!--iconlar
-		selamlar
+	<!--iconlar selamlar sea
 
 		-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
